# nearby

./: .gitignore
.github/workflows/: validate.yaml
connections/c/: BUILD
connections/rust/: Cargo.toml
connections/rust/nearby-connections-sys/: Cargo.toml  README.md  build.rs
connections/rust/nearby-connections-sys/src/: lib.rs
